[gd_scene load_steps=13 format=3 uid="uid://cwi0nx66octmc"]

[ext_resource type="Script" path="res://game/game.gd" id="1_kptdj"]
[ext_resource type="PackedScene" uid="uid://b5dybwji54d2d" path="res://game/player.tscn" id="1_yqcl7"]
[ext_resource type="Texture2D" uid="uid://cxueja2pscxgy" path="res://assets/log_run_2.png" id="2_g6drq"]
[ext_resource type="Theme" uid="uid://b2dcdrke78252" path="res://ui/theme.tres" id="3_pa1jd"]
[ext_resource type="Texture2D" uid="uid://cavx6ost2qakb" path="res://ui/panel_texture.tres" id="3_t3htm"]
[ext_resource type="Texture2D" uid="uid://bcydcqoosvdf0" path="res://assets/log_run_1.png" id="3_uk2gi"]
[ext_resource type="Script" path="res://game/sun.gd" id="4_14qi2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pskgp"]
atlas = ExtResource("3_uk2gi")
region = Rect2(1509, 206, 300, 300)

[sub_resource type="Animation" id="Animation_ngihm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sun:day_angle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [135.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sky:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 1000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.498039)]
}

[sub_resource type="Animation" id="Animation_d2vvd"]
resource_name = "day_cycle"
length = 270.0
loop_mode = 1
step = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sun:day_angle")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 270),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-135.0, 135.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sky:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 105, 180, 270),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(960, -40), Vector2(960, 1000), Vector2(960, 1000), Vector2(960, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Dawn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(15, 55, 75, 180, 225, 255, 270),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(960, 860), Vector2(960, 360), Vector2(960, 860), Vector2(960, 860), Vector2(960, 360), Vector2(960, 860), Vector2(960, 860)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(15, 75, 180, 240, 270),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.498039), Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 0.498039), Color(0, 0, 0, 0.498039)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfxwh"]
_data = {
"RESET": SubResource("Animation_ngihm"),
"day_cycle": SubResource("Animation_d2vvd")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jte4c"]
atlas = ExtResource("3_uk2gi")
region = Rect2(1509, 4, 300, 200)

[node name="Game" type="Node"]
script = ExtResource("1_kptdj")

[node name="Sky" type="Sprite2D" parent="."]
position = Vector2(960, 1000)
texture = ExtResource("2_g6drq")

[node name="Sun" type="Sprite2D" parent="."]
position = Vector2(252.893, 1254.97)
texture = ExtResource("3_uk2gi")
region_enabled = true
region_rect = Rect2(1509, 508, 300, 300)
script = ExtResource("4_14qi2")
day_angle = 135.0

[node name="Dawn" type="Sprite2D" parent="."]
position = Vector2(960, 860)
texture = ExtResource("3_uk2gi")
region_enabled = true
region_rect = Rect2(1, 892, 1920, 500)

[node name="Landscape" type="Sprite2D" parent="."]
position = Vector2(960, 745)
texture = ExtResource("3_uk2gi")
region_enabled = true
region_rect = Rect2(1, 1394, 1920, 510)

[node name="Player" parent="." instance=ExtResource("1_yqcl7")]
unique_name_in_owner = true
position = Vector2(960, 1060)

[node name="WaterFront" type="Sprite2D" parent="."]
position = Vector2(960, 1040)
texture = ExtResource("3_uk2gi")
region_enabled = true
region_rect = Rect2(1, 810, 1920, 80)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pa1jd")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -150.0
grow_horizontal = 0
grow_vertical = 0

[node name="GameModeButton" type="TextureButton" parent="Menu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_t3htm")

[node name="GameModeLabel" type="Label" parent="Menu/MarginContainer/GameModeButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pa1jd")
text = "Normal"

[node name="MarginContainer2" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -632.0
offset_bottom = 182.0
grow_horizontal = 0

[node name="BestScorePanel" type="TextureRect" parent="Menu/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_t3htm")

[node name="BestScoreLabel" type="Label" parent="Menu/MarginContainer2/BestScorePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Best: 0"

[node name="MarginContainer3" type="MarginContainer" parent="Menu"]
layout_mode = 1
offset_right = 632.0
offset_bottom = 182.0

[node name="CurrentScorePanel" type="TextureRect" parent="Menu/MarginContainer3"]
layout_mode = 2
texture = ExtResource("3_t3htm")

[node name="CurrentScoreLabel" type="Label" parent="Menu/MarginContainer3/CurrentScorePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Score: 0
"

[node name="StartButton" type="TextureButton" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_pskgp")

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0

[node name="DayAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kfxwh")
}

[node name="BGM" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="Controls" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_pa1jd")

[node name="HBox" type="HBoxContainer" parent="Controls"]
layout_mode = 2
alignment = 1

[node name="LeftButton" type="TextureButton" parent="Controls/HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_jte4c")

[node name="Control" type="Control" parent="Controls/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightButton" type="TextureButton" parent="Controls/HBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_jte4c")
flip_h = true

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="pressed" from="Menu/MarginContainer/GameModeButton" to="." method="_on_game_mode_button_pressed"]
[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="button_down" from="Controls/HBox/LeftButton" to="." method="_on_left_button_button_down"]
[connection signal="button_up" from="Controls/HBox/LeftButton" to="." method="_on_left_button_button_up"]
[connection signal="button_down" from="Controls/HBox/RightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_up" from="Controls/HBox/RightButton" to="." method="_on_right_button_button_up"]
